Add dependencies "reqwest" and "tokio"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["personinblack <berkay@tuta.io>"]
 edition = "2018"
 
 [dependencies]
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
